--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <main class="flex flex-col items-center gap-4">
-  <nav class="flex w-full flex-row flex-wrap gap-4 border-2">
+  <nav class="m-4 flex w-full flex-row flex-wrap gap-4">
     <a routerLink="/click-to-close">Click doc to close</a>
     <a routerLink="/md-renderer">Markdown Renderer</a>
   </nav>
