--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 @import "tailwindcss";
+@plugin "@tailwindcss/typography";
 
 @layer base {
   a {
-    @apply bg-amber-100
+    @apply bg-amber-100 underline
   }
 }
