--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
   <nav class="m-4 flex w-full flex-row flex-wrap gap-4">
     <a routerLink="/click-to-close">Click doc to close</a>
     <a routerLink="/md-renderer">Markdown Renderer</a>
+    <a routerLink="/ng-template">Angular Template</a>
   </nav>
 
   <router-outlet />
