--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
     <a routerLink="/click-to-close">Click doc to close</a>
     <a routerLink="/md-renderer">Markdown Renderer</a>
     <a routerLink="/ng-template">Angular Template</a>
+    <a routerLink="/music-player">Howler music player</a>
   </nav>
 
   <router-outlet />
