--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
     <a routerLink="/md-renderer">Markdown Renderer</a>
     <a routerLink="/ng-template">Angular Template</a>
     <a routerLink="/music-player">Howler music player</a>
+    <a routerLink="/mock-primeng">Mock PrimeNG</a>
   </nav>
 
   <router-outlet />
