--- a/src/app/mock-primeng/slider/slider.component.html
+++ b/src/app/mock-primeng/slider/slider.component.html
@@ -1,22 +1,24 @@
-<div class="container">
-  <span
-    class="back-track"
-    [ngStyle]="{ position: 'absolute', width: handleValue + '%' }"
-  ></span>
+<span
+  class="front-track"
+  [attr.data-pc-section]="'range'"
+  [ngStyle]="{ position: 'absolute', width: handleValue + '%' }"
+></span>
 
-  <span class="front-track"></span>
-
-  <span
-    #sliderHandle
-    class="handle"
-    [attr.aria-valuemin]="min()"
-    [attr.aria-valuenow]="value"
-    [attr.aria-valuemax]="max()"
-    [style.transition]="dragging ? 'none' : null"
-    [ngStyle]="{
-      position: 'absolute',
-      'inset-inline-start': handleValue + '%',
-    }"
-    (mousedown)="onMouseDown($event)"
-  ></span>
-</div>
+<span
+  class="handle"
+  #sliderHandle
+  [style.transition]="dragging ? 'none' : null"
+  [ngStyle]="{
+    position: 'absolute',
+    'inset-inline-start': handleValue + '%',
+  }"
+  (touchstart)="onDragStart($event)"
+  (touchmove)="onDrag($event)"
+  (touchend)="onDragEnd($event)"
+  (mousedown)="onMouseDown($event)"
+  role="slider"
+  [attr.aria-valuemin]="min()"
+  [attr.aria-valuenow]="value"
+  [attr.aria-valuemax]="max()"
+  [attr.data-pc-section]="'handle'"
+></span>
