--- a/src/app/mock-primeng/mock-primeng.component.html
+++ b/src/app/mock-primeng/mock-primeng.component.html
@@ -1,4 +1,4 @@
 <article class="flex flex-col gap-4">
-  <a routerLink="slider">Mock p-slider</a>
+  <a routerLink="slider-example">Mock p-slider</a>
   <router-outlet></router-outlet>
 </article>
