--- a/src/app/mock-primeng/slider/slider.component.html
+++ b/src/app/mock-primeng/slider/slider.component.html
@@ -1,11 +1,11 @@
 <span
-  class="front-track"
+  class="app-slider-front-track"
   [attr.data-pc-section]="'range'"
   [ngStyle]="{ position: 'absolute', width: handlePercentageValue + '%' }"
 ></span>
 
 <span
-  class="handle"
+  class="app-slider-handle"
   #sliderHandle
   [style.transition]="dragging ? 'none' : null"
   [ngStyle]="{
